CAPSTONE/Stage04-Startup-Limits/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: capstone
  labels:
    app.kubernetes.io/part-of: capstone
